# minipicolisp

./: .gitignore  README.txt  picolisp.sln
gen3m/: gen3m.c  gen3m.vcxproj  gen3m.vcxproj.filters
picolisp/: CMakeLists.txt  ReadMe.txt  apply.cpp  flow.cpp  gc.cpp  gen3m.cpp  io.cpp  main.cpp  math.cpp  pico.h  picolisp.vcxproj  picolisp.vcxproj.filters  ram.d  rom.d  stdafx.cpp  subr.cpp  sym.cpp  sym.d
